# bitcoin_puzzle_scanner

./: CMakeLists.txt  LICENSE  README.md  scrape_puzzles.py  test_hash.py  test_hash2.py  test_hash3.py  test_hash4.py  test_hash5.py  test_inv.py  test_modmul.cpp
.github/workflows/: build.yml
include/: checkpoint_manager.h  config.h  ecc.h  progress_manager.h  puzzles.h  ripemd160.h  ripemd160_keyhunt.h  scanner_engine.h  sha256.h  sha256_keyhunt.h  types.h  uint256.h  util.h
scripts/: scrape_puzzles.py  scratch.py  test_keys.py
src/: checkpoint_manager.cpp  ecc.cpp  main.cpp  progress_manager.cpp  ripemd160.cpp  ripemd160_keyhunt.cpp  ripemd160_sse.cpp  scanner_engine.cpp  sha256.cpp  sha256_keyhunt.cpp  sha256_sse.cpp  util.cpp
src/secp256k1/: Int.cpp  SECP256K1.cpp
tests/: test_main.cpp
